Integração de atributo telefone com validação e formatação tratada via Utils.